# Aurora

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE_NOTICE.md  README.md  THIRD_PARTY_NOTICES.md  prompt.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: build-release-windows.yml  build-release.yml  ci-macos.yml  ci-windows.yml  publish-release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Analysis/: FFTAnalyzer.cpp  FFTAnalyzer.h  LockFreeAudioFIFO.h
Source/Config/: ColourPalette.h  ParameterIDs.h  ProductConfig.h
Source/DSP/: AutoGainController.cpp  AutoGainController.h  BroadcastClipper.cpp  BroadcastClipper.h  BroadcastLimiter.cpp  BroadcastLimiter.h  BroadcastProcessorEngine.cpp  BroadcastProcessorEngine.h  DSPUtilities.cpp  DSPUtilities.h  FourBandCrossover.cpp  FourBandCrossover.h  HarmonicEnhancer.cpp  HarmonicEnhancer.h  InputStage.cpp  InputStage.h  MeteringEngine.cpp  MeteringEngine.h  MultibandDynamics.cpp  MultibandDynamics.h  ParametricEQ.cpp  ParametricEQ.h  StereoProcessor.cpp  StereoProcessor.h
Source/Parameters/: ParameterLayout.cpp  ParameterLayout.h  ParameterSnapshot.cpp  ParameterSnapshot.h
Source/Presets/: FactoryPresets.cpp  FactoryPresets.h  PresetManager.cpp  PresetManager.h
Source/UI/: AuroraLookAndFeel.cpp  AuroraLookAndFeel.h  SpectrumEQComponent.cpp  SpectrumEQComponent.h
Tests/: CMakeLists.txt  CrossoverTests.cpp  DSPTests.cpp  LayoutTests.cpp  LifecycleTests.cpp  LimiterTests.cpp  ParameterTests.cpp  PresetTests.cpp  StateTests.cpp  StereoTests.cpp  StressTests.cpp  TestMain.cpp
cmake/: CompilerWarnings.cmake  Dependencies.cmake  Packaging.cmake  ProjectOptions.cmake  Versioning.cmake
docs/: ARCHITECTURE.md  ARTIFACTS.md  BUILDING.md  BUILD_LOG.md  DSP_DESIGN.md  ENVIRONMENT.md  GITHUB_ACTIONS.md  HOST_TESTING.md  INSTALLATION.md  INSTALL_PREREQUISITES.md  KNOWN_LIMITATIONS.md  LEGACY_FORMAT_OPTIONS.md  PARAMETERS.md  PERFORMANCE.md  PRESETS.md  RELEASE_PROCESS.md  vst3-validation.txt
installer/: AuroraBroadcastProcessor.iss  installer-readme.txt  licence.txt
scripts/: bootstrap.ps1  build-debug.ps1  build-release.ps1  calculate-checksums.ps1  check-environment.ps1  configure.ps1  create-deterministic-zip.py  generate-release-manifest.ps1  github-build-macos.sh  github-build.ps1  github-configure-macos.sh  github-configure.ps1  github-package.ps1  github-test-macos.sh  github-test.ps1  install-vst3-local.ps1  package-release-macos.sh  package-release.ps1  run-tests.ps1  uninstall-vst3-local.ps1  validate-vst3.ps1  verify-release-output-macos.sh  verify-release-output.ps1
